manifest/bar-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar-nodeport
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31235
  selector:
    app: bar
