manifest/foo-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-nodeport
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 32234
  selector:
    app: foo
