manifest/all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foobar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: foobar.com
      http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: foo-nodeport
                port:
                  number: 3000  
          - path: /bar
            pathType: Prefix
            backend:
              service:
                name: bar-nodeport
                port:
                  number: 3000
